<resources>
    <string name="app_name">SampleApp</string>
    <string name="press_one_more_time">Press One More Time to Exit From App</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="list_of_platforms">List of Versions Available</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
</resources>
