<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:background="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/Black"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/Black"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintLeft_toLeftOf="@+id/emailET"
            app:layout_constraintRight_toRightOf="@+id/emailET"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />

        <CheckBox
            android:id="@+id/rememberCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/remember_me"
            android:textSize="@dimen/_14sp"
            app:layout_constraintLeft_toLeftOf="@+id/passwordET"
            app:layout_constraintTop_toBottomOf="@+id/passwordET" />


        <TextView
            android:id="@+id/forPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toBottomOf="@+id/rememberCB"
            app:layout_constraintRight_toRightOf="@+id/passwordET"
            app:layout_constraintTop_toTopOf="@+id/rememberCB"
            app:layout_constraintVertical_bias="0.5" />


        <Button
            android:id="@+id/loginBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="@dimen/_18sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/passwordET"
            app:layout_constraintRight_toRightOf="@+id/passwordET"
            app:layout_constraintTop_toBottomOf="@+id/rememberCB" />

        <TextView
            android:id="@+id/signUpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/Black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintLeft_toLeftOf="@+id/loginBT"
            app:layout_constraintRight_toRightOf="@+id/loginBT"
            app:layout_constraintTop_toBottomOf="@+id/loginBT"
            app:layout_constraintVertical_bias="0.236" />


    </android.support.constraint.ConstraintLayout>

</layout>
